--- a/lucid-svg.cabal
+++ b/lucid-svg.cabal
@@ -10,16 +10,20 @@ license:             BSD3
 license-file:        LICENSE
 author:              Jeffrey Rosenbluth
 maintainer:          jeffrey.rosenbluth@gmail.com
--- copyright:           
+copyright:           2015 Jeffrey Rosenbluth
 category:            Graphics
 build-type:          Simple
--- extra-source-files:  
+extra-source-files:  README.md
 cabal-version:       >=1.10
 
 library
-  -- exposed-modules:     
-  -- other-modules:       
-  -- other-extensions:    
-  build-depends:       base >=4.7 && <4.8
-  -- hs-source-dirs:      
+  ghc-options:         -Wall -rtsopts -O2
+  exposed-modules:     Lucid.Svg,
+                       Lucid.Svg.Elements,
+                       Lucid.Svg.Attributes
+  build-depends:       base >=4.7 && <4.8,
+                       transformers,
+                       text,
+                       lucid >=2.6 && <2.7
+  hs-source-dirs:      src
   default-language:    Haskell2010
