--- a/lucid-svg.cabal
+++ b/lucid-svg.cabal
@@ -2,7 +2,7 @@
 -- documentation, see http://haskell.org/cabal/users-guide/
 
 name:                lucid-svg
-version:             0.1.0.0
+version:             0.2.0.0
 synopsis:            DSL for SVG using lucid for HTML
 -- description:         
 homepage:            http://github.com/jeffreyrosenbluth/lucid-svg.git
@@ -22,9 +22,9 @@ library
                        Lucid.Svg.Path,
                        Lucid.Svg.Elements,
                        Lucid.Svg.Attributes
-  build-depends:       base >=4.7 && <4.8,
-                       transformers,
-                       text,
-                       lucid >=2.6 && <2.7
+  build-depends:       base         >=4.7 && <4.8,
+                       transformers >= 0.4 && < 0.5,
+                       text         >= 1.2 && < 1.3,
+                       lucid        >=2.6 && <2.7
   hs-source-dirs:      src
   default-language:    Haskell2010
