--- a/lucid-svg.cabal
+++ b/lucid-svg.cabal
@@ -23,6 +23,7 @@ library
                        Lucid.Svg.Elements,
                        Lucid.Svg.Attributes
   build-depends:       base         >=4.7 && <4.8,
+                       blaze-builder,
                        transformers >= 0.4 && < 0.5,
                        text         >= 1.2 && < 1.3,
                        lucid        >=2.6 && <2.7
