--- a/lucid-svg.cabal
+++ b/lucid-svg.cabal
@@ -22,10 +22,10 @@ library
                        Lucid.Svg.Path,
                        Lucid.Svg.Elements,
                        Lucid.Svg.Attributes
-  build-depends:       base         >=4.7 && <4.8,
-                       blaze-builder,
-                       transformers >= 0.4 && < 0.5,
-                       text         >= 1.2 && < 1.3,
-                       lucid        >=2.6 && <2.7
+  build-depends:       base          >=4.7 && <4.8,
+                       blaze-builder >= 0.3 && < 0.4,
+                       transformers  >= 0.4  && < 0.5,
+                       text          >= 1.2  && < 1.3,
+                       lucid         >=2.6.1 && < 2.7
   hs-source-dirs:      src
   default-language:    Haskell2010
