--- a/lucid-svg.cabal
+++ b/lucid-svg.cabal
@@ -1,6 +1,7 @@
 name:                lucid-svg
 version:             0.5.0.0
 synopsis:            DSL for SVG using lucid for HTML
+description:         Easy to write SVG in the syle of lucid.
 homepage:            http://github.com/jeffreyrosenbluth/lucid-svg.git
 license:             BSD3
 license-file:        LICENSE
