--- a/lucid-svg.cabal
+++ b/lucid-svg.cabal
@@ -1,5 +1,5 @@
 name:                lucid-svg
-version:             0.6.0.0
+version:             0.7.0.0
 synopsis:            DSL for SVG using lucid for HTML
 description:         Easy to write SVG in the syle of lucid.
 homepage:            http://github.com/jeffreyrosenbluth/lucid-svg.git
@@ -16,13 +16,12 @@ cabal-version:       >=1.10
 library
   ghc-options:         -Wall -rtsopts -O2
   exposed-modules:     Lucid.Svg,
+                       Lucid.Svg.Core,
                        Lucid.Svg.Path,
                        Lucid.Svg.Elements,
                        Lucid.Svg.Attributes
-  build-depends:       base          >= 4.5   && < 4.9,
-                       blaze-builder >= 0.2   && < 0.5,
-                       transformers  >= 0.2   && < 0.5,
-                       text          >= 0.11  && < 1.3,
-                       lucid         >= 2.9.2 && < 3.0
+  build-depends:       base                  >= 4.5   && < 4.9,
+                       text                  >= 0.11  && < 1.3,
+                       unordered-containers  >= 0.2 && < 0.2.7
   hs-source-dirs:      src
   default-language:    Haskell2010
