--- a/lucid-svg.cabal
+++ b/lucid-svg.cabal
@@ -21,6 +21,8 @@ library
                        Lucid.Svg.Elements,
                        Lucid.Svg.Attributes
   build-depends:       base                  >= 4.5   && < 4.9,
+                       blaze-builder         >= 0.4   && < 0.5,
+                       bytestring            >= 0.10  && < 0.11,
                        text                  >= 0.11  && < 1.3,
                        unordered-containers  >= 0.2 && < 0.2.7
   hs-source-dirs:      src
