--- a/lucid-svg.cabal
+++ b/lucid-svg.cabal
@@ -1,7 +1,7 @@
 name:                lucid-svg
 version:             0.7.0.0
-synopsis:            DSL for SVG using lucid for HTML
-description:         Easy to write SVG in the syle of lucid.
+synopsis:            DSL for composing SVG.
+description:         Easy to write SVG.
 homepage:            http://github.com/jeffreyrosenbluth/lucid-svg.git
 license:             BSD3
 license-file:        LICENSE
