--- a/lucid-svg.cabal
+++ b/lucid-svg.cabal
@@ -23,6 +23,7 @@ library
   build-depends:       base                  >= 4.5   && < 4.10,
                        blaze-builder         >= 0.4   && < 0.5,
                        bytestring            >= 0.10  && < 0.11,
+                       hashable             >= 1.1   && < 1.3,
                        text                  >= 0.11  && < 1.3,
                        unordered-containers  >= 0.2 && < 0.2.7
   hs-source-dirs:      src
