--- a/lucid-svg.cabal
+++ b/lucid-svg.cabal
@@ -22,7 +22,7 @@ library
   build-depends:       base          >= 4.5   && < 5,
                        blaze-builder >= 0.2   && < 0.5,
                        transformers  >= 0.2   && < 0.6,
-                       text          >= 0.11  && < 1.3,
+                       text          >= 0.11  && < 1.3 || >= 2 && < 2.1,
                        lucid         >= 2.9.2 && < 3.0
   hs-source-dirs:      src
   default-language:    Haskell2010
